# hello-again-c

./: CMakeLists.txt  a.out  linked_list.c
include/: linked_list.h
src/: CMakeLists.txt  linked_list.c
test/: CMakeLists.txt  linked_list_test.cpp  run_all_tests.cpp
